--- a/src/SoundCharts.Explorer.MacOS/Main.storyboard
+++ b/src/SoundCharts.Explorer.MacOS/Main.storyboard
@@ -824,7 +824,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="206" height="363"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" viewBased="YES" floatsGroupRows="NO" indentationPerLevel="13" outlineTableColumn="QcB-3m-29s" id="d28-pJ-NtN" customClass="SourceListView">
+                                        <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" tableStyle="sourceList" selectionHighlightStyle="sourceList" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" viewBased="YES" floatsGroupRows="NO" indentationPerLevel="13" outlineTableColumn="QcB-3m-29s" id="d28-pJ-NtN" customClass="SourceListView">
                                             <rect key="frame" x="0.0" y="0.0" width="206" height="363"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <size key="intercellSpacing" width="3" height="0.0"/>
@@ -887,30 +887,39 @@
                                                                 <outlet property="textField" destination="wnd-lx-1zN" id="tiG-J7-hhA"/>
                                                             </connections>
                                                         </tableCellView>
-                                                        <tableCellView identifier="DataCell" id="FGt-ZW-yDR">
-                                                            <rect key="frame" x="11" y="34" width="183" height="17"/>
+                                                        <customView identifier="OfflineTilesetView" id="M9k-Uz-KWy" customClass="OfflineTilesetView">
+                                                            <rect key="frame" x="11" y="34" width="183" height="41"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
-                                                                <imageView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AiO-J7-gEs">
-                                                                    <rect key="frame" x="3" y="0.0" width="17" height="17"/>
-                                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                                                    <imageCell key="cell" refusesFirstResponder="YES" imageScaling="proportionallyDown" image="NSActionTemplate" id="t6n-AB-clX"/>
+                                                                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="g79-z4-iaE">
+                                                                    <rect key="frame" x="10" y="5" width="32" height="32"/>
+                                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES"/>
+                                                                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="GDr-q9-amg"/>
                                                                 </imageView>
-                                                                <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YW4-cA-FCZ">
-                                                                    <rect key="frame" x="25" y="0.0" width="158" height="17"/>
+                                                                <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XRz-zQ-Atf">
+                                                                    <rect key="frame" x="37" y="20" width="139" height="21"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="TM7-38-NmF">
-                                                                        <font key="font" metaFont="system"/>
+                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" usesSingleLineMode="YES" id="YYR-C9-zg5">
+                                                                        <font key="font" usesAppearanceFont="YES"/>
                                                                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                                                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                                    </textFieldCell>
+                                                                </textField>
+                                                                <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xxt-AT-hsr">
+                                                                    <rect key="frame" x="37" y="0.0" width="139" height="21"/>
+                                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" usesSingleLineMode="YES" id="5UA-Wf-X9P">
+                                                                        <font key="font" metaFont="system"/>
+                                                                        <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
+                                                                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                                     </textFieldCell>
                                                                 </textField>
                                                             </subviews>
                                                             <connections>
-                                                                <outlet property="imageView" destination="AiO-J7-gEs" id="o90-PH-POH"/>
-                                                                <outlet property="textField" destination="YW4-cA-FCZ" id="Dlq-XN-8tg"/>
+                                                                <outlet property="DescriptionTextField" destination="Xxt-AT-hsr" id="eux-mK-EXl"/>
+                                                                <outlet property="TitleTextField" destination="XRz-zQ-Atf" id="JP5-wv-0uy"/>
                                                             </connections>
-                                                        </tableCellView>
+                                                        </customView>
                                                     </prototypeCellViews>
                                                 </tableColumn>
                                             </tableColumns>
@@ -964,7 +973,4 @@
             <point key="canvasLocation" x="811" y="1740"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="NSActionTemplate" width="15" height="15"/>
-    </resources>
 </document>
