--- a/src/SoundCharts.Explorer.MacOS/Main.storyboard
+++ b/src/SoundCharts.Explorer.MacOS/Main.storyboard
@@ -814,24 +814,24 @@
             <objects>
                 <viewController id="wcZ-aa-Q5z" customClass="SourceListViewController" sceneMemberID="viewController">
                     <view key="view" misplaced="YES" id="C6z-mm-DnB">
-                        <rect key="frame" x="0.0" y="0.0" width="206" height="363"/>
+                        <rect key="frame" x="0.0" y="0.0" width="300" height="363"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <scrollView fixedFrame="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="17" horizontalPageScroll="10" verticalLineScroll="17" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ChW-aN-3Wd">
-                                <rect key="frame" x="0.0" y="0.0" width="206" height="363"/>
+                                <rect key="frame" x="0.0" y="0.0" width="300" height="363"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <clipView key="contentView" drawsBackground="NO" id="vf4-2E-B6L">
-                                    <rect key="frame" x="0.0" y="0.0" width="206" height="363"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="300" height="363"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" tableStyle="sourceList" selectionHighlightStyle="sourceList" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" viewBased="YES" floatsGroupRows="NO" indentationPerLevel="13" outlineTableColumn="QcB-3m-29s" id="d28-pJ-NtN" customClass="SourceListView">
-                                            <rect key="frame" x="0.0" y="0.0" width="206" height="363"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="300" height="363"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <size key="intercellSpacing" width="3" height="0.0"/>
                                             <color key="backgroundColor" name="_sourceListBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                             <tableColumns>
-                                                <tableColumn width="174" minWidth="16" maxWidth="1000" id="QcB-3m-29s">
+                                                <tableColumn width="268" minWidth="16" maxWidth="1000" id="QcB-3m-29s">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                         <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
@@ -844,11 +844,11 @@
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <prototypeCellViews>
                                                         <tableCellView identifier="HeaderCell" id="eZx-FB-4k7">
-                                                            <rect key="frame" x="11" y="0.0" width="183" height="17"/>
+                                                            <rect key="frame" x="11" y="0.0" width="277" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
                                                                 <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qq9-06-jP0">
-                                                                    <rect key="frame" x="0.0" y="1" width="182" height="14"/>
+                                                                    <rect key="frame" x="0.0" y="1" width="276" height="14"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                                     <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Header Cell" id="S3U-RG-m46">
                                                                         <font key="font" metaFont="systemMedium" size="11"/>
@@ -862,11 +862,11 @@
                                                             </connections>
                                                         </tableCellView>
                                                         <tableCellView identifier="OfflineTilesetsSwitchCell" id="TAn-JJ-D33" customClass="OfflineTilesetsSwitchView">
-                                                            <rect key="frame" x="11" y="17" width="183" height="17"/>
+                                                            <rect key="frame" x="11" y="17" width="277" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
                                                                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wnd-lx-1zN">
-                                                                    <rect key="frame" x="0.0" y="1" width="137" height="16"/>
+                                                                    <rect key="frame" x="0.0" y="1" width="231" height="16"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                                     <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="o6K-Bk-BcV">
                                                                         <font key="font" usesAppearanceFont="YES"/>
@@ -875,7 +875,7 @@
                                                                     </textFieldCell>
                                                                 </textField>
                                                                 <switch horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" controlSize="mini" baseWritingDirection="leftToRight" alignment="left" translatesAutoresizingMaskIntoConstraints="NO" id="H7G-3t-Knj">
-                                                                    <rect key="frame" x="153" y="0.0" width="28" height="16"/>
+                                                                    <rect key="frame" x="247" y="0.0" width="28" height="16"/>
                                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                                                     <connections>
                                                                         <action selector="OnOfflineSwitchAction:" target="TAn-JJ-D33" id="5Lu-WA-TZY"/>
@@ -888,7 +888,7 @@
                                                             </connections>
                                                         </tableCellView>
                                                         <customView identifier="OfflineTilesetView" id="M9k-Uz-KWy" customClass="OfflineTilesetView">
-                                                            <rect key="frame" x="11" y="34" width="183" height="50"/>
+                                                            <rect key="frame" x="11" y="34" width="277" height="50"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
                                                                 <imageView wantsLayer="YES" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="g79-z4-iaE">
@@ -898,7 +898,7 @@
                                                                     <color key="contentTintColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                                                 </imageView>
                                                                 <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XRz-zQ-Atf">
-                                                                    <rect key="frame" x="49" y="20" width="127" height="21"/>
+                                                                    <rect key="frame" x="49" y="20" width="221" height="21"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                                     <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Title" usesSingleLineMode="YES" id="YYR-C9-zg5">
                                                                         <font key="font" usesAppearanceFont="YES"/>
@@ -907,7 +907,7 @@
                                                                     </textFieldCell>
                                                                 </textField>
                                                                 <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xxt-AT-hsr">
-                                                                    <rect key="frame" x="49" y="3" width="127" height="21"/>
+                                                                    <rect key="frame" x="49" y="3" width="221" height="21"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                                     <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Description" usesSingleLineMode="YES" id="5UA-Wf-X9P">
                                                                         <font key="font" metaFont="system"/>
@@ -915,8 +915,20 @@
                                                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                                     </textFieldCell>
                                                                 </textField>
+                                                                <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Exh-fV-kde">
+                                                                    <rect key="frame" x="240" y="11" width="28" height="28"/>
+                                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES"/>
+                                                                    <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSTouchBarDownloadTemplate" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="Znt-t8-cWc">
+                                                                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                                                        <font key="font" metaFont="system"/>
+                                                                    </buttonCell>
+                                                                    <connections>
+                                                                        <action selector="OnActionButtonAction:" target="M9k-Uz-KWy" id="Tqd-uW-EfD"/>
+                                                                    </connections>
+                                                                </button>
                                                             </subviews>
                                                             <connections>
+                                                                <outlet property="ActionButton" destination="Exh-fV-kde" id="SfN-oX-UTw"/>
                                                                 <outlet property="DescriptionTextField" destination="Xxt-AT-hsr" id="eux-mK-EXl"/>
                                                                 <outlet property="TitleTextField" destination="XRz-zQ-Atf" id="JP5-wv-0uy"/>
                                                             </connections>
@@ -929,7 +941,7 @@
                                     <nil key="backgroundColor"/>
                                 </clipView>
                                 <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="Ex6-BZ-gvc">
-                                    <rect key="frame" x="0.0" y="347" width="206" height="16"/>
+                                    <rect key="frame" x="0.0" y="347" width="300" height="16"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="Yvj-fH-udb">
@@ -947,7 +959,7 @@
                 </viewController>
                 <customObject id="yq8-ko-A0e" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-293" y="1739.5"/>
+            <point key="canvasLocation" x="-246" y="1739.5"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="aRt-IX-cZB">
@@ -975,6 +987,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="NSTouchBarDownloadTemplate" width="15" height="15"/>
         <image name="square.3.layers.3d.down.right" catalog="system" width="16" height="17"/>
     </resources>
 </document>
