--- a/src/SoundCharts.Explorer.MacOS/Main.storyboard
+++ b/src/SoundCharts.Explorer.MacOS/Main.storyboard
@@ -888,35 +888,26 @@
                                                             </connections>
                                                         </tableCellView>
                                                         <customView identifier="OfflineTilesetView" id="M9k-Uz-KWy" customClass="OfflineTilesetView">
-                                                            <rect key="frame" x="11" y="34" width="277" height="50"/>
+                                                            <rect key="frame" x="11" y="34" width="277" height="36"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
                                                                 <imageView wantsLayer="YES" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="g79-z4-iaE">
-                                                                    <rect key="frame" x="7" y="7" width="36" height="36"/>
+                                                                    <rect key="frame" x="16" y="3" width="30" height="30"/>
                                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES"/>
                                                                     <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyUpOrDown" imageFrameStyle="grayBezel" image="square.3.layers.3d.down.right" catalog="system" id="GDr-q9-amg"/>
                                                                     <color key="contentTintColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                                                 </imageView>
-                                                                <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XRz-zQ-Atf">
-                                                                    <rect key="frame" x="49" y="20" width="221" height="21"/>
-                                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Title" usesSingleLineMode="YES" id="YYR-C9-zg5">
-                                                                        <font key="font" usesAppearanceFont="YES"/>
-                                                                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                                                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                                                    </textFieldCell>
-                                                                </textField>
                                                                 <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xxt-AT-hsr">
-                                                                    <rect key="frame" x="49" y="3" width="221" height="21"/>
+                                                                    <rect key="frame" x="49" y="-4" width="182" height="21"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Description" usesSingleLineMode="YES" id="5UA-Wf-X9P">
-                                                                        <font key="font" metaFont="system"/>
+                                                                    <textFieldCell key="cell" controlSize="small" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Description" usesSingleLineMode="YES" id="5UA-Wf-X9P">
+                                                                        <font key="font" metaFont="smallSystem"/>
                                                                         <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                                                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                                     </textFieldCell>
                                                                 </textField>
                                                                 <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Exh-fV-kde">
-                                                                    <rect key="frame" x="240" y="11" width="28" height="28"/>
+                                                                    <rect key="frame" x="237" y="4" width="20" height="26"/>
                                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES"/>
                                                                     <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSTouchBarDownloadTemplate" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="Znt-t8-cWc">
                                                                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -926,6 +917,15 @@
                                                                         <action selector="OnActionButtonAction:" target="M9k-Uz-KWy" id="Tqd-uW-EfD"/>
                                                                     </connections>
                                                                 </button>
+                                                                <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XRz-zQ-Atf">
+                                                                    <rect key="frame" x="49" y="12" width="182" height="21"/>
+                                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Title" usesSingleLineMode="YES" id="YYR-C9-zg5">
+                                                                        <font key="font" usesAppearanceFont="YES"/>
+                                                                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                                    </textFieldCell>
+                                                                </textField>
                                                             </subviews>
                                                             <connections>
                                                                 <outlet property="ActionButton" destination="Exh-fV-kde" id="SfN-oX-UTw"/>
